# zer0share

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.example.toml
docs/: SYNC_GUIDE.md
docs/plans/: 2026-04-17-daily-kline-range-sync-impl.md  2026-04-17-stock-basic-full-field-impl.md  2026-04-17-trade-cal-design.md  2026-04-17-trade-cal-impl.md  2026-04-17-tushare-pipeline-design.md  2026-04-17-tushare-pipeline-impl.md  2026-04-24-local-query-api-design.md  2026-04-24-local-query-api-impl.md
examples/: README.md  local_query_api_smoke.py
scripts/: validate_adj_factor.py
src/: __init__.py  api.py  cli.py  config.py  fetcher.py  notifier.py  pipeline.py  scheduler.py  storage.py
tests/: test_api.py  test_cli.py  test_config.py  test_fetcher.py  test_notifier.py  test_pipeline.py  test_scheduler.py  test_storage.py
zer0share/: __init__.py  api.py  cli.py  pipeline.py  scheduler.py  storage.py
