[project]
name = "zer0share"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tushare>=1.4.0",
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "apscheduler>=3.10.0",
    "click>=8.1.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.14.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
